页面多例化（按路径单例）